--- a/manual/Appendix.tex
+++ b/manual/Appendix.tex
@@ -66,30 +66,33 @@ The example below illustrates printing of lines of text from multiple actors (in
 #include <chrono>
 #include <cstdlib>
 #include <iostream>
+
 #include "caf/all.hpp"
 
 using namespace caf;
 using std::endl;
 
+using done_atom = atom_constant<atom("done")>;
+
 int main() {
-    std::srand(std::time(0));
-    for (int i = 1; i <= 50; ++i) {
-        spawn<blocking_api>([i](blocking_actor* self) {
-          aout(self) << "Hi there! This is actor nr. "
-                     << i << "!" << endl;
-          std::chrono::milliseconds tout{std::rand() % 1000};
-          self->delayed_send(self, tout, atom("done"));
-          self->receive(others() >> [i, self] {
-              aout(self) << "Actor nr. "
-                         << i << " says goodbye!" << endl;
-          });
-        });
-    }
-    // wait until all other actors we've spawned are done
-    await_all_actors_done();
-    // done
-    shutdown();
-    return 0;
+  std::srand(std::time(0));
+  for (int i = 1; i <= 50; ++i) {
+    spawn<blocking_api>([i](blocking_actor* self) {
+      aout(self) << "Hi there! This is actor nr. "
+                 << i << "!" << endl;
+      std::chrono::milliseconds tout{std::rand() % 1000};
+      self->delayed_send(self, tout, done_atom::value);
+      self->receive(
+        [i, self](done_atom) {
+          aout(self) << "Actor nr. "
+                     << i << " says goodbye!" << endl;
+        }
+      );
+    });
+  }
+  // wait until all other actors we've spawned are done
+  await_all_actors_done();
+  shutdown();
 }
 \end{lstlisting}
 
