--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -129,6 +129,7 @@
 \include{TypeSystem}
 \include{BlockingAPI}
 \include{StronglyTypedActors}
+\include{Messages}
 \include{CommonPitfalls}
 \include{Appendix}
 
