Add manual section covering actor pools

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -125,6 +125,7 @@
 \include{NetworkTransparency}
 \include{NetworkIO}
 \include{GroupCommunication}
+\include{ManagingGroupsOfWorkers}
 \include{ActorCompanions}
 \include{TypeSystem}
 \include{BlockingAPI}
